--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,10 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.idea/compiler.xml
+src/com/BoolExprsEval/.idea/modules.xml
+*.xml
+.idea/.name
+*.iml
+src/com/BoolExprsEval/.idea/.name
+out/production/Boolean Expression Evaluator/com/BoolExprsEval/.idea/.name
